menambahkan bagian home about dan layanan publik

--- a/index.html
+++ b/index.html
@@ -34,6 +34,91 @@
     </div>
     <!-- End Navbar -->
 
+    <div class="main-content container">
+      <section class="home" id="home">
+        <div class="home-text">
+          <h1>Dinas Perhubungan Kota Malang</h1>
+          <p>
+            Dinas Perhubungan merupakan unsur pelaksana otonomi daerah di bidang perhubungan yang berkedudukan di bawah dan bertanggung jawab kepada Gubernur melalui SEKDA. Dinas Perhubungan mempunyai tugas pokok melaksanakan urusan
+            pemerintahan daerah bidang perhubungan berdasarkan asas otonomi daerah dan tugas pembantuan.
+          </p>
+          <a href="#">Lebih Lanjut</a>
+        </div>
+        <div class="home-img">
+          <img src="asset/home-image.png" alt="dishub logo" />
+        </div>
+      </section>
+
+      <section class="about" id="about">
+        <h2>Profil Singkat</h2>
+        <div class="about-text">
+          <h3>Visi</h3>
+          <p>Terwujudnya Sistem Transportasi yang Handal dan Terintegrasi</p>
+          <h3>Misi</h3>
+          <p>Meningkatkan Kualitas Sistem Transportasi Aman, Tertib, dan Nyaman</p>
+          <h3>5 Citra Manusia Perhubungan</h3>
+          <ul>
+            <li>Taqwa terhadap Tuhan Yang Maha Esa</li>
+            <li>Tanggap terhadap kebutuhan masyarakat akan pelayanan jasa yang tertib, teratur, tepat waktu, bersih dan nyaman</li>
+            <li>Tangguh menghadapi tantangan</li>
+            <li>Terampil dan berperilaku gesit, jujur, ramah, sopan serta lugas</li>
+            <li>Tanggung jawab terhadap keselamatan dan keamanan jasa perhubungan</li>
+          </ul>
+        </div>
+        <div class="about-leader">
+          <h3>Pimpinan</h3>
+          <div class="img-leader">
+            <img src="asset/Heru-Mulyono-244x300.jpeg" alt="heru mulyono" />
+          </div>
+          <div class="text-info">
+            <div class="biodata">
+              <h4>Kepala Dinas</h4>
+              <ul>
+                <li>Nama : Heru Mulyono, SIP, MT</li>
+                <li>NIP : 19720420 199201 1 001</li>
+                <li>TTL : Malang, 20 April 1972</li>
+              </ul>
+            </div>
+            <div class="biodata">
+              <h4>Pendidikan : S2</h4>
+              <p>Riwayat Jabatan :</p>
+              <ul>
+                <li>Kasi Kecamatan Blimbing Kota Malang</li>
+                <li>Kasubbid BKBPM Kota Malang</li>
+                <li>Kabid BPBD Kota Malang</li>
+                <li>Sekretaris Bakesbangpol Kota Malang</li>
+                <li>Camat Klojen Kota Malang</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="layanan" id="layanan">
+        <h2>Layanan Publik</h2>
+        <div class="layanan-left">
+          <div class="moto">
+            <h3>Moto Pelayanan</h3>
+            <p>Alur dan Standar Pelayanan Pengaduan Dinas Perhubungan Kota Malang</p>
+            <a href="https://dishub.malangkota.go.id/layanan-publik/motto-pelayanan/" target="_blank">Lanjut</a>
+          </div>
+          <div class="standar">
+            <h3>Standar Pelayanan Publik</h3>
+            <a href="">Pelayanan Bidang Angkutan</a>
+            <ul>
+              <li><a href="#">Perubahan Atas Peraturan Walikota Malang Nomor 24 Tahun 2013 Tentang Tarip Angkutan</a></li>
+              <li><a href="#">Persyaratan Administrasi Kepengurusan Rekomendasi Kendaraan Truck</a></li>
+              <li><a href="#">Mekanisme Prosedur Pelaksanaan Pelayanan Surat Rekomendasi Izin Trayek Angkutan</a></li>
+              <li><a href="#">Mekanisme Prosedur Pelaksanaan Pelayanan Surat Rekomendasi Plat Kuning</a></li>
+            </ul>
+            <a href="">Pelayanan Bidang Lalu Lintas</a>
+            <a href="">Prosedur Penyelenggaran Perparkiran Dinas Perhubungan Kota Malang</a>
+            <a href="">Mekanisme Pelayanan Pengujian Kendaraan Bermotor</a>
+          </div>
+        </div>
+      </section>
+    </div>
+
     <script src="javascript/script.js"></script>
   </body>
 </html>
