--- a/index.html
+++ b/index.html
@@ -104,16 +104,18 @@
           </div>
           <div class="standar">
             <h3>Standar Pelayanan Publik</h3>
-            <a href="">Pelayanan Bidang Angkutan</a>
-            <ul>
-              <li><a href="#">Perubahan Atas Peraturan Walikota Malang Nomor 24 Tahun 2013 Tentang Tarip Angkutan</a></li>
-              <li><a href="#">Persyaratan Administrasi Kepengurusan Rekomendasi Kendaraan Truck</a></li>
-              <li><a href="#">Mekanisme Prosedur Pelaksanaan Pelayanan Surat Rekomendasi Izin Trayek Angkutan</a></li>
-              <li><a href="#">Mekanisme Prosedur Pelaksanaan Pelayanan Surat Rekomendasi Plat Kuning</a></li>
-            </ul>
-            <a href="">Pelayanan Bidang Lalu Lintas</a>
-            <a href="">Prosedur Penyelenggaran Perparkiran Dinas Perhubungan Kota Malang</a>
-            <a href="">Mekanisme Pelayanan Pengujian Kendaraan Bermotor</a>
+            <a href="https://dishub.malangkota.go.id/layanan-publik/pelayanan-bidang-angkutan/" target="_blank">Pelayanan Bidang Angkutan</a>
+            <a href="https://dishub.malangkota.go.id/layanan-publik/pelayanan-bidang-angkutan/perubahan-atas-peraturan-walikota-malang-nomor-24-tahun-2013-tentang-tarip-angkutan/" target="_blank"
+              >Perubahan Atas Peraturan Walikota Malang Nomor 24 Tahun 2013 Tentang Tarip Angkutan</a
+            >
+            <a href="https://dishub.malangkota.go.id/layanan-publik/persyaratan-administrasi-kepengurusan-rekomendasi-kendaraan-truck/" target="_blank">Persyaratan Administrasi Kepengurusan Rekomendasi Kendaraan Truck</a>
+            <a href="https://dishub.malangkota.go.id/mekanisme-prosedur-pelaksanaan-pelayanan-surat-rekomendasi-izin-perpindahan-trayek-angkutan-dalam-trayek-2/" target="_blank"
+              >Mekanisme Prosedur Pelaksanaan Pelayanan Surat Rekomendasi Izin Trayek Angkutan</a
+            >
+            <a href="https://dishub.malangkota.go.id/mekanisme-prosedur-pelaksanaan-pelayanan-surat-rekomendasi-plat-kuning-2/" target="_blank">Mekanisme Prosedur Pelaksanaan Pelayanan Surat Rekomendasi Plat Kuning</a>
+            <a href="https://dishub.malangkota.go.id/layanan-publik/pelayanan-bidang-lalu-lintas/" target="_blank">Pelayanan Bidang Lalu Lintas</a>
+            <a href="https://dishub.malangkota.go.id/layanan-publik/prosedur-penyelenggaraan-perparkiran-dinas-perhubungan-kota-malang/" target="_blank">Prosedur Penyelenggaran Perparkiran Dinas Perhubungan Kota Malang</a>
+            <a href="https://dishub.malangkota.go.id/mekanisme-pelayanan-pengujian-kendaraan-bermotor/" target="_blank">Mekanisme Pelayanan Pengujian Kendaraan Bermotor</a>
           </div>
         </div>
       </section>
