--- a/index.html
+++ b/index.html
@@ -102,20 +102,61 @@
             <p>Alur dan Standar Pelayanan Pengaduan Dinas Perhubungan Kota Malang</p>
             <a href="https://dishub.malangkota.go.id/layanan-publik/motto-pelayanan/" target="_blank">Lanjut</a>
           </div>
-          <div class="standar">
+          <div class="accordion">
             <h3>Standar Pelayanan Publik</h3>
-            <a href="https://dishub.malangkota.go.id/layanan-publik/pelayanan-bidang-angkutan/" target="_blank">Pelayanan Bidang Angkutan</a>
-            <a href="https://dishub.malangkota.go.id/layanan-publik/pelayanan-bidang-angkutan/perubahan-atas-peraturan-walikota-malang-nomor-24-tahun-2013-tentang-tarip-angkutan/" target="_blank"
-              >Perubahan Atas Peraturan Walikota Malang Nomor 24 Tahun 2013 Tentang Tarip Angkutan</a
-            >
-            <a href="https://dishub.malangkota.go.id/layanan-publik/persyaratan-administrasi-kepengurusan-rekomendasi-kendaraan-truck/" target="_blank">Persyaratan Administrasi Kepengurusan Rekomendasi Kendaraan Truck</a>
-            <a href="https://dishub.malangkota.go.id/mekanisme-prosedur-pelaksanaan-pelayanan-surat-rekomendasi-izin-perpindahan-trayek-angkutan-dalam-trayek-2/" target="_blank"
-              >Mekanisme Prosedur Pelaksanaan Pelayanan Surat Rekomendasi Izin Trayek Angkutan</a
-            >
-            <a href="https://dishub.malangkota.go.id/mekanisme-prosedur-pelaksanaan-pelayanan-surat-rekomendasi-plat-kuning-2/" target="_blank">Mekanisme Prosedur Pelaksanaan Pelayanan Surat Rekomendasi Plat Kuning</a>
-            <a href="https://dishub.malangkota.go.id/layanan-publik/pelayanan-bidang-lalu-lintas/" target="_blank">Pelayanan Bidang Lalu Lintas</a>
-            <a href="https://dishub.malangkota.go.id/layanan-publik/prosedur-penyelenggaraan-perparkiran-dinas-perhubungan-kota-malang/" target="_blank">Prosedur Penyelenggaran Perparkiran Dinas Perhubungan Kota Malang</a>
-            <a href="https://dishub.malangkota.go.id/mekanisme-pelayanan-pengujian-kendaraan-bermotor/" target="_blank">Mekanisme Pelayanan Pengujian Kendaraan Bermotor</a>
+            <div class="accordion-item">
+              <div class="accordion-item-header">
+                <a href="https://dishub.malangkota.go.id/layanan-publik/pelayanan-bidang-angkutan/" target="_blank">Pelayanan Bidang Angkutan</a>
+              </div>
+              <div class="accordion-item-body">
+                <div class="accordion-item-body-content">
+                  <a href="https://dishub.malangkota.go.id/layanan-publik/pelayanan-bidang-angkutan/perubahan-atas-peraturan-walikota-malang-nomor-24-tahun-2013-tentang-tarip-angkutan/" target="_blank"
+                    >Perubahan Atas Peraturan Walikota Malang Nomor 24 Tahun 2013 Tentang Tarip Angkutan</a
+                  >
+                </div>
+                <div class="accordion-item-body-content">
+                  <a href="https://dishub.malangkota.go.id/layanan-publik/persyaratan-administrasi-kepengurusan-rekomendasi-kendaraan-truck/" target="_blank">Persyaratan Administrasi Kepengurusan Rekomendasi Kendaraan Truck</a>
+                </div>
+                <div class="accordion-item-body-content">
+                  <a href="https://dishub.malangkota.go.id/mekanisme-prosedur-pelaksanaan-pelayanan-surat-rekomendasi-izin-perpindahan-trayek-angkutan-dalam-trayek-2/" target="_blank"
+                    >Mekanisme Prosedur Pelaksanaan Pelayanan Surat Rekomendasi Izin Trayek Angkutan</a
+                  >
+                </div>
+                <div class="accordion-item-body-content">
+                  <a href="https://dishub.malangkota.go.id/mekanisme-prosedur-pelaksanaan-pelayanan-surat-rekomendasi-plat-kuning-2/" target="_blank">Mekanisme Prosedur Pelaksanaan Pelayanan Surat Rekomendasi Plat Kuning</a>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <div class="accordion-item-header">
+                <a href="https://dishub.malangkota.go.id/layanan-publik/pelayanan-bidang-lalu-lintas/" target="_blank">Pelayanan Bidang Lalu Lintas</a>
+              </div>
+              <div class="accordion-item-body">
+                <div class="accordion-item-body-content">
+                  <a href="https://dishub.malangkota.go.id/layanan-publik/pelayanan-bidang-lalu-lintas/" target="_blank">Pelayanan Bidang Lalu Lintas</a>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <div class="accordion-item-header">
+                <a href="https://dishub.malangkota.go.id/layanan-publik/prosedur-penyelenggaraan-perparkiran-dinas-perhubungan-kota-malang/" target="_blank">Prosedur Penyelenggaran Perparkiran Dinas Perhubungan Kota Malang</a>
+              </div>
+              <div class="accordion-item-body">
+                <div class="accordion-item-body-content">
+                  <a href="https://dishub.malangkota.go.id/layanan-publik/prosedur-penyelenggaraan-perparkiran-dinas-perhubungan-kota-malang/" target="_blank">Prosedur Penyelenggaran Perparkiran Dinas Perhubungan Kota Malang</a>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <div class="accordion-item-header">
+                <a href="https://dishub.malangkota.go.id/mekanisme-pelayanan-pengujian-kendaraan-bermotor/" target="_blank">Mekanisme Pelayanan Pengujian Kendaraan Bermotor</a>
+              </div>
+              <div class="accordion-item-body">
+                <div class="accordion-item-body-content">
+                  <a href="https://dishub.malangkota.go.id/mekanisme-pelayanan-pengujian-kendaraan-bermotor/" target="_blank">Mekanisme Pelayanan Pengujian Kendaraan Bermotor</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
